// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbox Placement Reducer get all inbox placement test messages fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getAllMessagesError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getAllMessagesPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get all inbox placement test messages pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getAllMessagesError": null,
  "getAllMessagesPending": true,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get all inbox placement test messages success 1`] = `
Object {
  "allMessages": Object {
    "fakeData": true,
  },
  "currentTestDetails": Object {},
  "getAllMessagesError": null,
  "getAllMessagesPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestContentError": null,
  "getTestContentPending": true,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content pending fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestContentError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTestContentPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestContent": Object {
    "fakeData": true,
  },
  "currentTestDetails": Object {},
  "getTestContentError": null,
  "getTestContentPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getMessageError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getMessagePending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getMessageError": null,
  "getMessagePending": 101,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages success 1`] = `
Object {
  "allMessages": Array [
    Object {
      "headers": "fake headers",
      "id": 1,
    },
  ],
  "currentTestDetails": Object {},
  "getMessageError": null,
  "getMessagePending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestError": null,
  "getTestPending": true,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTestPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {
    "fakeData": true,
  },
  "getTestError": null,
  "getTestPending": false,
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer list seeds fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsError": undefined,
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer list seeds pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsError": null,
  "seedsPending": true,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer list seeds success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": undefined,
  "seedsError": null,
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer list tests fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "testsPending": false,
}
`;

exports[`Inbox Placement Reducer list tests pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsError": null,
  "testsPending": true,
}
`;

exports[`Inbox Placement Reducer list tests success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "placementsByProvider": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Object {
    "fakeData": true,
  },
  "testsError": null,
  "testsPending": false,
}
`;

exports[`Inbox Placement Reducer resets State 1`] = `
Object {
  "state": Object {
    "allMessages": Array [],
    "currentTestDetails": Object {},
    "placementsByProvider": Array [],
    "seeds": Array [],
    "seedsPending": false,
    "stopTestPending": false,
    "tests": Array [],
    "testsPending": true,
  },
}
`;
